2017.9/_sources/plugins/available/composition/ancom.txt
ancom: Apply ANCOM to identify features that differ in abundance.
=================================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime composition ancom [OPTIONS]

     Apply Analysis of Composition of Microbiomes (ANCOM) to identify features
     that are differentially abundant across groups.

   Options:
     --i-table PATH                  Artifact: FeatureTable[Composition]
                                     [required]
                                     The feature table to be used for
                                     ANCOM computation.
     --m-metadata-file PATH          Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata  [required]
     --m-metadata-category TEXT      Category from metadata file or artifact
                                     viewable as metadata  [required]
                                     The sample
                                     metadata category to test for differential
                                     abundance across.
     --p-transform-function [clr|sqrt|log]
                                     [default: clr]
                                     The method applied to
                                     transform feature values before generating
                                     volcano plots.
     --p-difference-function [f_statistic|mean_difference]
                                     [optional]
                                     The method applied to visualize
                                     fold difference in feature abundances across
                                     groups for volcano plots.
     --o-visualization PATH          Visualization [required if not passing
                                     --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Apply ANCOM to identify features that differ in abundance.

   Apply Analysis of Composition of Microbiomes (ANCOM) to identify features
   that are differentially abundant across groups.

   Parameters
   ----------
   table : FeatureTable[Composition]
       The feature table to be used for ANCOM computation.
   metadata : MetadataCategory
       The sample metadata category to test for differential abundance across.
   transform_function : Str % Choices({'clr', 'log', 'sqrt'}), optional
       The method applied to transform feature values before generating
       volcano plots.
   difference_function : Str % Choices({'f_statistic', 'mean_difference'}), optional
       The method applied to visualize fold difference in feature abundances
       across groups for volcano plots.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>